# air

./: .nojekyll  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cli.html  configuration.html  editor-emacs.html  editor-helix.html  editor-neovim.html  editor-rstudio.html  editor-vscode.html  editor-zed.html  editors.html  formatter.html  index.html  integration-github-actions.html  integration-pre-commit.html  integration-uv.html  robots.txt  search.json  sitemap.xml
crates/air/: Cargo.toml
crates/air/src/commands/format/: paths.rs  stdin.rs
crates/air/tests/integration/: config.rs  main.rs
crates/air/tests/integration/helpers/: command_ext.rs
crates/air/tests/integration/snapshots/: integration__config__user_config_applies_to_stdin.snap  integration__config__user_config_broken_toml_is_a_hard_error.snap  integration__config__user_config_rooted_exclude_is_a_hard_error.snap
crates/air_r_formatter/tests/: spec_test.rs
crates/lsp/src/: capabilities.rs  handlers.rs  workspaces.rs
crates/lsp/src/notifications/: sync_file_settings.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: config.rs  discovery.rs  file_patterns.rs  lib.rs  resolve.rs  toml_options.rs
crates/workspace/src/settings/: default_exclude_patterns.rs  default_include_patterns.rs  exclude_patterns.rs
crates/workspace/src/snapshots/: workspace__discovery__test__discover_user_settings_rejects_rooted_exclude.snap  workspace__discovery__test__discover_user_settings_unparseable.snap  workspace__file_patterns__test__unrooted_file_pattern_rejects_rooted_patterns-2.snap  workspace__file_patterns__test__unrooted_file_pattern_rejects_rooted_patterns.snap
docs/: cli.qmd  configuration.qmd
editors/code/: CHANGELOG.md  README.md  package.json
python/: pyproject.toml
site_libs/bootstrap/: bootstrap-0f4083360e61307f1c5d88898a817599.min.css  bootstrap-205e91abea4da518a360a56c0d1c6de9.min.css  bootstrap-8c8aa0801b8c80d083f1c1e874309953.min.css  bootstrap-a1dca789ef9c6e6849c09b4139a81be6.min.css  bootstrap-ca4b5c5f0c951feadd7c1e0eb9860721.min.css
