[workspace]
resolver = "2"
members = ["crates/*", "editors/zed", "xtask/codegen", "xtask/json_schema"]

[workspace.package]
authors = ["Posit Software, PBC"]
edition = "2024"
rust-version = "1.94"
homepage = "https://github.com/posit-dev/air"
repository = "https://github.com/posit-dev/air"
license = "MIT"
keywords = ["formatter", "parser"]
categories = ["development-tools"]

[workspace.dependencies]
aether_lsp_utils = { path = "./crates/aether_lsp_utils" }
air_formatter_test = { path = "./crates/air_formatter_test" }
air_r_factory = { path = "./crates/air_r_factory" }
air_r_formatter = { path = "./crates/air_r_formatter" }
air_r_parser = { path = "./crates/air_r_parser" }
air_r_syntax = { path = "./crates/air_r_syntax" }
anyhow = "1.0.89"
assert_matches = "1.5.0"
biome_formatter = { git = "https://github.com/lionel-/biome", rev = "a1296ea6ba363d8b8d8f02181b2a4ce9315c5ef9" }
biome_line_index = { git = "https://github.com/lionel-/biome", rev = "a1296ea6ba363d8b8d8f02181b2a4ce9315c5ef9" }
biome_parser = { git = "https://github.com/lionel-/biome", rev = "a1296ea6ba363d8b8d8f02181b2a4ce9315c5ef9" }
biome_rowan = { git = "https://github.com/lionel-/biome", rev = "a1296ea6ba363d8b8d8f02181b2a4ce9315c5ef9" }
biome_string_case = { git = "https://github.com/lionel-/biome", rev = "a1296ea6ba363d8b8d8f02181b2a4ce9315c5ef9" }
biome_text_size = { git = "https://github.com/lionel-/biome", rev = "a1296ea6ba363d8b8d8f02181b2a4ce9315c5ef9" }
biome_ungrammar = { path = "./crates/biome_ungrammar" }
biome_unicode_table = { git = "https://github.com/lionel-/biome", rev = "a1296ea6ba363d8b8d8f02181b2a4ce9315c5ef9" }
bytes = "1.8.0"
cargo_metadata = "0.20.0"
case = "1.0.0"
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.66"
colored = "3.0.0"
comments = { path = "./crates/comments" }
crates = { path = "./crates/crates" }
dissimilar = "1.0.9"
etcetera = "0.11.0"
fs = { path = "./crates/fs" }
futures = "0.3.31"
futures-util = "0.3.31"
globwalk = "0.9.1"
httparse = "1.9.5"
ignore = "0.4.23"
insta = "1.40.0"
itertools = "0.13.0"
line_ending = { path = "./crates/line_ending" }
lsp = { path = "./crates/lsp" }
lsp_test = { path = "./crates/lsp_test" }
memchr = "2.7.4"
path-absolutize = "3.1.1"
proc-macro2 = "1.0.86"
proc-macro-error = "1.0.4"
quote = "1.0.37"
rustc-hash = "2.1.0"
schemars = "0.9.0"
serde = "1.0.215"
serde_json = "1.0.132"
settings = { path = "./crates/settings" }
similar-asserts = "1.6.0"
struct-field-names-as-array = "0.3.0"
strum = "0.26"
syn = "2.0.59"
tempfile = "3.9.0"
tests_macros = { path = "./crates/tests_macros" }
thiserror = "2.0.5"
tokio = "1.50.0"
tokio-util = "0.7.18"
toml = "0.8.19"
# For https://github.com/ebkalderon/tower-lsp/pull/428
tower-lsp = { branch = "bugfix/patches", git = "https://github.com/lionel-/tower-lsp" }
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
tracing-subscriber = "0.3.19"
tree-sitter = "0.24.7"
tree-sitter-r = { git = "https://github.com/r-lib/tree-sitter-r", rev = "d459b97a9a11dd81643ab674938bede2874663b0" }
url = "2.5.3"
uuid = { version = "1.11.0", features = ["v4"] }
workspace = { path = "./crates/workspace" }

[workspace.lints.clippy]
assigning_clones = "warn"
cfg_not_test = "warn"
checked_conversions = "warn"
cloned_instead_of_copied = "warn"
copy_iterator = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_enum = "warn"
empty_enum_variants_with_brackets = "warn"
expl_impl_clone_on_copy = "warn"
explicit_into_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
get_unwrap = "warn"
implicit_clone = "warn"
implicit_hasher = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
iter_filter_is_ok = "warn"
iter_not_returning_iterator = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_is_variant_and = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
mismatching_type_param_order = "warn"
mut_mut = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_for_each = "warn"
no_effect_underscore_binding = "warn"
option_as_ref_cloned = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
ref_binding_to_reference = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
single_char_pattern = "warn"
stable_sort_primitive = "warn"
str_split_at_newline = "warn"
string_lit_chars_any = "warn"
unnecessary_box_returns = "warn"
unnecessary_join = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
verbose_bit_mask = "warn"
verbose_file_reads = "warn"

[profile.release-with-debug]
inherits = "release"
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
