[package]
name = "air"
version = "0.11.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["wrap_help"] }
clap_complete = { workspace = true }
colored = { workspace = true }
crates = { workspace = true }
fs = { workspace = true }
ignore = { workspace = true }
itertools = { workspace = true }
lsp = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
workspace = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
