[package]
name = "workspace"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
air_r_formatter = { workspace = true }
air_r_parser = { workspace = true }
anyhow = { workspace = true }
biome_formatter = { workspace = true, features = ["serde"] }
etcetera = { workspace = true }
fs = { workspace = true }
ignore = { workspace = true }
line_ending = { workspace = true }
rustc-hash = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
settings = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
schemars = ["dep:schemars", "settings/schemars"]

[lints]
workspace = true
